<resources>
    <string name="app_name">SpotOn_v3</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="todo">todo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="title_activity_history">History</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_result">Result</string>
    <string name="aircraft">Aircraft</string>
    <string name="confidence">Confidence</string>
    <string name="homepage">Homepage</string>
    <string name="display_image">Display Image</string>
    <string name="background_image">background image</string>
    <string name="background_image2">background image</string>
    <string name="upload_image">UPLOAD IMAGE</string>
    <string name="capture">CAPTURE</string>
</resources>